fix: [MIX-##] fix tracks overflow on safari
chore: temporary disabled trim waveforms to prevent page crash

--- a/src/entities/track/ui/Waveform/styles.module.css
+++ b/src/entities/track/ui/Waveform/styles.module.css
@@ -6,6 +6,7 @@
   display: none;
 }
 
+/* 
 @supports (content-visibility: hidden) {
   .waveform ::part(canvases) {
     content-visibility: hidden;
@@ -16,4 +17,8 @@
   .waveform ::part(canvases) {
     display: none;
   }
+} */
+
+.waveform ::part(canvases) {
+  clip-path: none !important;
 }
